Fix superscript vertical alignment in Chrome/FF

--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -151,7 +151,7 @@ body:not(#words) article {
 sup {
     line-height: 0px;
     /* Reset things in anticipation of using superscript characters */
-    vertical-align: top;
+    vertical-align: baseline;
     font-size: inherit;
 }
 
